--- a/src/Components/FriendListItem/FriendListItem.module.css
+++ b/src/Components/FriendListItem/FriendListItem.module.css
@@ -1,8 +1,3 @@
-.friend-list {
-  display: flex;
-  gap: 10px;
-}
-
 .item {
   display: flex;
   flex-direction: column;
@@ -16,7 +11,16 @@
   border-radius: 10px;
   border: 2px solid black;
 }
-
+.statusOnline {
+  width: 50px;
+  height: 10px;
+  color: green;
+}
+.statusOffline {
+  width: 50px;
+  height: 10px;
+  color: red;
+}
 .avatar {
   width: 85px;
   height: 85px;
@@ -30,37 +34,4 @@
   font-size: 22px;
   color: #333;
   margin-bottom: 10px;
-}
-
-.status {
-  width: 50px;
-  height: 10px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  bottom: 10px;
-}
-
-.online {
-  color: green;
-  position: absolute;
-  bottom: -30px;
-}
-
-.offline {
-  color: red;
-  position: absolute;
-  bottom: -30px;
-}
-
-.friend-list {
-  list-style: none;
-  padding: 0;
-}
-
-img {
-  margin-left: 10px;
-  width: 50px;
-  height: 50px;
 }
